tests/ui/consts/mir_check_nonconst.stderr
error[E0015]: cannot call non-const fn `bar` in statics
  --> $DIR/mir_check_nonconst.rs:8:19
   |
LL | static foo: Foo = bar();
   |                   ^^^^^
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `Lazy::new(|| ...)` from the `once_cell` crate: https://crates.io/crates/once_cell

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
